--- a/app/views/noticeofchange/solicitor/securityquestiondivorce.html
+++ b/app/views/noticeofchange/solicitor/securityquestiondivorce.html
@@ -70,7 +70,7 @@ Case details
                                             </label>
                                             {% if data.errorsecuritydivorcefirstname == 'true'  %}
                                                 <span id="" class="govuk-error-message">
-                                                    <span class="govuk-visually-hidden">Error:</span> Enter your client's first name
+                                                    <span class="govuk-visually-hidden">Error:</span> First name must exactly match the details on the case, including any mistakes
                                                 </span>
                                             {% endif %}
 
@@ -92,7 +92,7 @@ Case details
                                             </label>
                                             {% if data.errorsecuritydivorcelastname == 'true'  %}
                                                 <span id="" class="govuk-error-message">
-                                                    <span class="govuk-visually-hidden">Error:</span> Enter your client's last name
+                                                    <span class="govuk-visually-hidden">Error:</span> Last name must exactly match the details on the case, including any mistakes
                                                 </span>
                                             {% endif %}
 
