--- a/app/views/noticeofchange/solicitor/securityquestionprobate.html
+++ b/app/views/noticeofchange/solicitor/securityquestionprobate.html
@@ -77,7 +77,7 @@ Case details
                                             </label>
                                             {% if data.errorsecurityprobatetitle == 'true'  %}
                                                 <span id="" class="govuk-error-message">
-                                                    <span class="govuk-visually-hidden">Error:</span> Title must exactly match the details on the case, including any mistakes.
+                                                    <span class="govuk-visually-hidden">Error:</span> Title must exactly match the details on the case, including any mistakes
                                                 </span>
                                             {% endif %}
 
@@ -99,7 +99,7 @@ Case details
                                             </label>
                                             {% if data.errorsecurityprobatefirstname == 'true'  %}
                                                 <span id="" class="govuk-error-message">
-                                                    <span class="govuk-visually-hidden">Error:</span> First name must exactly match the details on the case, including any mistakes.
+                                                    <span class="govuk-visually-hidden">Error:</span> First name must exactly match the details on the case, including any mistakes
                                                 </span>
                                             {% endif %}
 
@@ -121,7 +121,7 @@ Case details
                                             </label>
                                             {% if data.errorsecurityprobatelastname == 'true'  %}
                                                 <span id="" class="govuk-error-message">
-                                                    <span class="govuk-visually-hidden">Error:</span> Last name must exactly match the details on the case, including any mistakes.
+                                                    <span class="govuk-visually-hidden">Error:</span> Last name must exactly match the details on the case, including any mistakes
                                                 </span>
                                             {% endif %}
 
@@ -148,7 +148,7 @@ Case details
                                                 </span>
                                                     {% if data.errorsecurityprobatedate == 'true'  %}
                                                     <span id="" class="govuk-error-message">
-                                                        <span class="govuk-visually-hidden">Error:</span> Date of birth must exactly match the details on the case, including any mistakes.
+                                                        <span class="govuk-visually-hidden">Error:</span> Date of birth must exactly match the details on the case, including any mistakes
                                                     </span>
                                                 {% endif %}
                                             </p>
