Updates to content of new error states

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -13,7 +13,16 @@
             Notice of change
         </h1>
 
+        <p class="govuk-!-font-weight-bold">NOC starting pages</p>
 
+        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=divorce&">Caselist - Divorce</a></p>
+
+        <!--  <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=financialremedy&">Caselist - Financial Remedy</a></p>  -->
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=probate&">Caselist - Probate</a></p>
+
+        <br>
+        <br>
 
         <p class="govuk-!-font-weight-bold">Emails - generic across services  </p>
 
@@ -28,16 +37,14 @@
         <p><a target="_blank" href="/noticeofchange/solicitor/emailgoingoffrecordrejected">Go off record - review outcome - rejected</a></p>
 
 
-        <br>
-        <br>
+        <p class="govuk-!-font-weight-bold">Error sates</p>
 
-        <p class="govuk-!-font-weight-bold">NOC starting pages</p>
+        <p><a target="_blank" href="/noticeofchange/solicitor/alreadygotcaseerror">Already have access</a></p>
 
-        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=divorce&">Caselist - Divorce</a></p>
+        <p><a target="_blank" href="/noticeofchange/solicitor/errorcontactus">Problem - Contact us</a></p>
 
-       <!--  <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=financialremedy&">Caselist - Financial Remedy</a></p>  -->
 
-        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=probate&">Caselist - Probate</a></p>
+
 
 
         <!-- V2 Scenarios
