--- a/app/views/noticeofchange/solicitor/errorcontactus.html
+++ b/app/views/noticeofchange/solicitor/errorcontactus.html
@@ -13,8 +13,8 @@ Case details
 
             <div class="govuk-grid-column-two-thirds">
                 <h1 class="govuk-heading-l" id="cookies">Something went wrong</h1>
-                <p class="govuk-body">Your request has not been submitted.</p>
-                <p class="govuk-body"><a href="contactus">Contact us</a> to resolve this issue.</p>
+                <p class="govuk-body">Your notice of change request has not been submitted.</p>
+                <p class="govuk-body"><a href="contactus">Contact us</a> for help.</p>
         </div>
     </div>
 
