fix to NOC based on definition feedback from shivali

--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -51,11 +51,11 @@ Case details
 
                         <div class="hmcts-page-heading">
                               <div class="hmcts-page-heading__title">
-                                   <h1 class="govuk-heading-l">Notice of acting</h1>
+                                   <h1 class="govuk-heading-l">Notice of change</h1>
                               </div>
                         </div>
 
-                        <p>You can use this notice of acting to tell a court that the legal representative in a case has changed.</p>
+                        <p>You can use this notice of change to tell a court that the legal representative in a case has changed.</p>
 
                         <form
                                 name="aspnetForm"
