Updates for testing and from API

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -36,10 +36,15 @@
 
         <p><a target="_blank" href="/noticeofchange/solicitor/emailgoingoffrecordrejected">Go off record - review outcome - rejected</a></p>
 
-
+        <br>
+        <br>
         <p class="govuk-!-font-weight-bold">Error sates</p>
 
         <p><a target="_blank" href="/noticeofchange/solicitor/alreadygotcaseerror">Already have access</a></p>
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/errormultiplematch">Details match multiple parties</a></p>
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/errorcontactus">PNOC already in progress</a></p>
 
         <p><a target="_blank" href="/noticeofchange/solicitor/errorcontactus">Problem - Contact us</a></p>
 
