--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -17,13 +17,14 @@ Case details
                 {% if data.serviceeligibilityerror == 'true' %}
                     <div class="hmcts-page-heading">
                         <div class="hmcts-page-heading__title">
-                            <h1 class="govuk-heading-l">Your case isn’t supported online</h1>
+                            <h1 class="govuk-heading-l">Your request cannot be submitted online</h1>
                         </div>
                     </div>
 
                     <p>You can’t currently file an online notice of change for this case.</p>
 
-                    <p>Fill out the <a href="https://www.gov.uk/government/publications/form-n434-notice-of-change-of-solicitor">paper form</a>  to complete a notice of change for this case offline.</p>
+                    <p> You can fill out a <a href="https://www.gov.uk/government/publications/form-n434-notice-of-change-of-solicitor">paper form</a>
+                        to complete a notice of change for this case offline. If you do this, you won’t be able to access the case online.</p>
 
                     <p class="govuk-body"><a href="caselist">View case list</a></p>
 
@@ -48,6 +49,22 @@ Case details
                         {% endif %}
 
 
+                        {% if data.errorcasenumbernomatch == 'true' %}
+                            <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+                                <h2 class="govuk-error-summary__title" id="error-summary-title">
+                                    There is a problem
+                                </h2>
+                                <div class="govuk-error-summary__body">
+                                    <ul class="govuk-list govuk-error-summary__list">
+                                        <li>
+                                            <a href="#casenumber">Enter an online case reference</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        {% endif %}
+
+
 
                         <div class="hmcts-page-heading">
                               <div class="hmcts-page-heading__title">
@@ -63,7 +80,7 @@ Case details
                                 id="aspnetForm"
                                 autocomplete="off">
 
-                                {% if data.errorcasenumber == 'true' %}
+                                {% if data.errorcasenumber == 'true'  or  data.errorcasenumbernomatch == 'true' %}
                                     <div class="govuk-form-group govuk-form-group--error">
                                 {% else %}
                                     <div class="govuk-form-group ">
@@ -77,7 +94,7 @@ Case details
                                       </span>
 
 
-                                    {% if data.errorcasenumber == 'true' %}
+                                    {% if  data.errorcasenumber == 'true'  or  data.errorcasenumbernomatch == 'true'  %}
                                         <span id="national-insurance-number-error" class="govuk-error-message">
                                             <span class="govuk-visually-hidden">Error:</span> You must enter an online case reference number that exactly matches the case details
                                         </span>
@@ -103,15 +120,19 @@ Case details
 <form method="post"  action="#" class="for4" style=" float: left; margin-top: 50px;">
     <select style="height:25px;" onchange="window.location.href='?'+this.value">
 
-        <option value="errorcasenumber=false&serviceeligibilityerror=false&"
+        <option value="errorcasenumber=false&serviceeligibilityerror=false&errorcasenumbernomatch=false&"
                 {% if data.errorcasenumber == 'false' %}selected{% endif %}
         >Default</option>
 
-        <option value="errorcasenumber=true&serviceeligibilityerror=false&"
+        <option value="errorcasenumber=true&serviceeligibilityerror=false&errorcasenumbernomatch=false&"
                 {% if data.errorcasenumber == 'true'  %}selected{% endif %}
-        >Format error</option>
+        >Error: Format</option>
 
-        <option value="errorcasenumber=false&serviceeligibilityerror=true&"
+        <option value="errorcasenumber=false&serviceeligibilityerror=false&errorcasenumbernomatch=true&"
+                {% if data.errorcasenumbernomatch == 'true'  %}selected{% endif %}
+        >Error: No match</option>
+
+        <option value="errorcasenumber=false&serviceeligibilityerror=true&errorcasenumbernomatch=false&"
                 {% if data.errorcasenumber == 'false' and  data.serviceeligibilityerror == 'true'  %}selected{% endif %}
         >Service not eligible</option>
 
