--- a/app/views/noticeofchange/solicitor/securityquestionprobate.html
+++ b/app/views/noticeofchange/solicitor/securityquestionprobate.html
@@ -11,7 +11,6 @@ Case details
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
 
-
                 {% if data.errorsecurityprobate == 'true' %}
                     <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
                         <h2 class="govuk-error-summary__title" id="error-summary-title">
@@ -19,6 +18,13 @@ Case details
                         </h2>
                         <div class="govuk-error-summary__body">
                             <ul class="govuk-list govuk-error-summary__list">
+
+                                {% if data.errornomatch == 'true'  %}
+                                <li>
+                                    <a href="#firstnamelinkpoint">AAAAAAAAAAAAAAAAAAAAAAAA</a>
+                                </li>
+                                {% endif %}
+
                                 {% if data.errorsecurityprobatetitle == 'true'  %}
                                 <li>
                                     <a href="#titlelinkpoint">You must enter a title</a>
@@ -43,7 +49,6 @@ Case details
                                 </li>
                                 {% endif %}
 
-
                             </ul>
                         </div>
                     </div>
@@ -64,8 +69,12 @@ Case details
                         method="post"
                         id="aspnetForm"
                         autocomplete="off">
-
+                            {% if data.errornomatch == 'true'  %}
+                                 <div class="govuk-form-group govuk-form-group--error" id="firstnamelinkpoint">
+                            {% endif %}
                                 <fieldset class="govuk-fieldset govuk-form-group " role="group" >
+
+
 
                                     {% if data.errorsecurityprobatetitle == 'true'  %}
                                         <div class="govuk-form-group govuk-form-group--error"  id="titlelinkpoint">
@@ -202,7 +211,13 @@ Case details
                                             </div>
 
                                         </div>
+
+
                                 </fieldset>
+
+                            {% if data.errornomatch == 'true'  %}
+                                 </div>
+                            {% endif %}
 
 
                         <div class="govuk-form-group ">
@@ -215,5 +230,20 @@ Case details
             </div>
         </div>
     </div>
+
+
+<form method="post"  action="#" class="for4" style=" float: left; margin-top: 50px;">
+    <select style="height:25px;" onchange="window.location.href='?'+this.value">
+
+        <option value="errorsecurityprobate=true&errorsecurityprobatetitle=true&errorsecurityprobatefirstname=true&errorsecurityprobatelastname=true&errorsecurityprobatedate=true&errornomatch=false&errorsecurityprobatedateday=true&errorsecurityprobatedatemonth=true&errorsecurityprobatedateyear=true&"
+                {% if data.errorsecurityprobatetitle == 'true'  %}selected{% endif %}
+        >Empty fields</option>
+
+        <option value="errorsecurityprobate=true&errornomatch=true&errorsecurityprobatetitle=false&errorsecurityprobatefirstname=false&errorsecurityprobatelastname=false&errorsecurityprobatedate=false&errorsecurityprobatedateday=false&errorsecurityprobatedatemonth=false&errorsecurityprobatedateyear=false&"
+                {% if data.errornomatch == 'true'  %}selected{% endif %}
+        >Not matching case data</option>
+
+    </select>
+</form>
 
 {% endblock %}
