updates to validation states for no case match

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -44,7 +44,7 @@
 
         <p><a target="_blank" href="/noticeofchange/solicitor/errormultiplematch">Details match multiple parties</a></p>
 
-        <p><a target="_blank" href="/noticeofchange/solicitor/errorcontactus">PNOC already in progress</a></p>
+        <p><a target="_blank" href="/noticeofchange/solicitor/errornocinprogress">NOC already in progress</a></p>
 
         <p><a target="_blank" href="/noticeofchange/solicitor/errorcontactus">Problem - Contact us</a></p>
 
