--- a/app/views/noticeofchange/solicitor/emailofremoved.html
+++ b/app/views/noticeofchange/solicitor/emailofremoved.html
@@ -68,7 +68,7 @@
 
                             <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
                             <p style="margin:0 0 30px;font-size:19px">A notice of change has been filed online for case 1593-0136-4696-9976. </p>
-                            <p style="margin:30px 0 30px;font-size:19px">You are no longer representing Neil Higham.</p>
+                            <p style="margin:30px 0 30px;font-size:19px">You are no longer representing Dorothy Fisher.</p>
 
                             <p style="margin:30px 0 30px;font-size:19px">You have been removed from this case and no longer have access to it.
                                 If you don’t represent another party in this case, it will be removed from your case list.</p>
