--- a/app/views/noticeofchange/solicitor/confirmstop.html
+++ b/app/views/noticeofchange/solicitor/confirmstop.html
@@ -27,8 +27,19 @@ Case details
 
                 <dl class="govuk-summary-list ">
                     <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__value">
+                        <dt class="govuk-summary-list__key">
                             Change request
+                        </dt>
+                        <dd class="govuk-summary-list__value">
+                            Go off record
+                            <br>(Notice of Change)
+                        </dd>
+                        <dd class="govuk-summary-list__actions">
+                        </dd>
+                    </div>
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__value">
+                            Client
                         </dt>
                         <dd class="govuk-summary-list__value">
                             {{ data.clientname }}
