--- a/app/views/noticeofchange/solicitor/confirmstop.html
+++ b/app/views/noticeofchange/solicitor/confirmstop.html
@@ -27,7 +27,7 @@ Case details
 
                 <dl class="govuk-summary-list ">
                     <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
+                        <dt class="govuk-summary-list__value">
                             Change request
                         </dt>
                         <dd class="govuk-summary-list__value">
