header now matches the divorce service perfectly

--- a/app/views/searchorgs/search/divorce1.html
+++ b/app/views/searchorgs/search/divorce1.html
@@ -7,7 +7,8 @@ Case details
 
 {% block content %}
 
-    <div class="govuk-width-container">
+<div style="width:960px; display: flex; margin: 0 auto;">
+
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
 
@@ -60,8 +61,8 @@ Case details
 
             </div>
         </div>
-    </div>
 
+</div>
 
 
 <script>
