--- a/app/views/searchorgs/search/divorce1.html
+++ b/app/views/searchorgs/search/divorce1.html
@@ -9,15 +9,15 @@ Case details
 
 <div style="width:960px; display: flex; margin: 0 auto;">
 
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-grid-row govuk-grid-column-two-thirds">
+            <div class="">
 
 
 
 
                 <div class="hmcts-page-heading">
                       <div class="hmcts-page-heading__title">
-                           <h1 class="govuk-heading-l">Search for other parties solicitor's firm</h1>
+                           <h1 class="govuk-heading-l">Search for the other party's solicitor firm</h1>
                       </div>
                 </div>
 
