notice of change updates from early september user testing

--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -68,11 +68,17 @@ Case details
 
                         <div class="hmcts-page-heading">
                               <div class="hmcts-page-heading__title">
-                                   <h1 class="govuk-heading-l">Notice of change</h1>
+                                   <h1 class="govuk-heading-l">Notice of change or notice of acting</h1>
                               </div>
                         </div>
 
-                        <p>You can use this notice of change to tell a court that the legal representative in a case has changed.</p>
+
+                        <p>You can use this notice of change or notice of acting to tell the court that:</p>
+                        <ul class="govuk-list govuk-list--bullet">
+                            <li>the legal representative in this case has changed</li>
+                            <li>a client has instructed a legal representative to act on their behalf</li>
+                        </ul>
+
 
                         <form
                                 name="aspnetForm"
