--- a/app/views/noticeofchange/solicitor/confirmstop.html
+++ b/app/views/noticeofchange/solicitor/confirmstop.html
@@ -69,6 +69,9 @@ Case details
 
                 <br>
 
+                <div class="govuk-inset-text">
+                    You will no longer have access to this case file once you’ve submitted this request.
+                </div>
 
                 <form
                         name="aspnetForm"
