--- a/app/views/noticeofchange/solicitor/stopreason.html
+++ b/app/views/noticeofchange/solicitor/stopreason.html
@@ -49,7 +49,7 @@ Case details
                                 Continue
                             </button>
                         </div>
-                        <p><a href="caselist">Cancel</a></p
+                        <p><a href="caselist">Cancel</a></p>
                 </form>
 
             </div>
