--- a/app/views/noticeofchange/solicitor/stopselectclients.html
+++ b/app/views/noticeofchange/solicitor/stopselectclients.html
@@ -30,7 +30,7 @@ Case details
 
         <p class="govuk-heading-m govuk-!-margin-bottom-3">#{{ data.casenumberselectedccdformat }}&nbsp; </p>
 
-        <h1 class="govuk-heading-m">Which clients do you want to stop representing?</h1>
+        <h1 class="govuk-heading-m">Confirm client name</h1>
     </div>
 </div>
 
