--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -76,6 +76,9 @@ Case details
                                 This case will now appear in your case list.
                             </p>
                             <p class="govuk-body">
+                                You should inform all parties involved in the case.
+                            </p>
+                            <p class="govuk-body">
                                 This is a new online process - you don’t need to file any further documents to the court.
                             </p>
 
