--- a/app/views/searchorgs/search/divorce1.html
+++ b/app/views/searchorgs/search/divorce1.html
@@ -12,9 +12,6 @@ Case details
         <div class="govuk-grid-row govuk-grid-column-two-thirds">
             <div class="">
 
-
-
-
                 <div class="hmcts-page-heading">
                       <div class="hmcts-page-heading__title">
                            <h1 class="govuk-heading-l">Search for the other party's solicitor firm</h1>
@@ -43,22 +40,195 @@ Case details
                         </div>
 
                         <div id="testesult1" style="display: none;">
-                            <p id="results1" ><span class="govuk-!-font-weight-bold">Name of org</span>
-                            <br>Line 1
-                            <br>Line 2
-                            <br>Linee 3
-                            <br>Town
-                            <br>POSTCODE
+                            <p id="results1" ><span class="govuk-!-font-weight-bold">@Cornwall Law LLP</span>
+                            <br>11 Edward Street
+                            <br>Cornwall
+                            <br>TR1 3AR
                             </p>
                         </div>
 
                         <div id="testesult2" style="display: none;">
-                            <p id="results2" ><span class="govuk-!-font-weight-bold">Admiral</span>
+                            <p id="results2" >
+                                <span class="govuk-!-font-weight-bold">2 Dr Johnson's Buildings</span>
+                                <br>2 Doctor Johnson's Buildings
+                                <br>Temple
+                                <br>London
+                                <br>EC4Y 7AY
+                            </p>
+                        </div>
+
+                        <div id="testesult3" style="display: none;">
+                            <p id="results3" >
+                                <span class="govuk-!-font-weight-bold">9 Group Ltd</span>
+                                <br>The Hub
+                                <br>Stonehouse Business Park
+                                <br>Stonehouse
+                                <br>Gloucestershire
+                                <br>GL10 3UT
+                            </p>
+                        </div>
+
+                        <div id="testesult4" style="display: none;">
+                            <p id="results4" >
+                                <span class="govuk-!-font-weight-bold">A & P Solicitors Limited</span>
+                                <br>19
+                                <br>Village Way East
+                                <br>Harrow
+                                <br>Middlesex
+                                <br>HA2 7LX
+                            </p>
+                        </div>
+
+                        <div id="testesult5" style="display: none;">
+                            <p id="results5" >
+                                <span class="govuk-!-font-weight-bold">Alison Proctor LLP</span>
+                                <br>73 Cornhill
+                                <br>London
+                                <br>EC3V 3QQ
+                            </p>
+                        </div>
+
+
+                        <div id="testesult6" style="display: none;">
+                            <p id="results6" >
+                                <span class="govuk-!-font-weight-bold">BERRYMANS LACE MAWER LLP</span>
+                                <br>Kings House
+                                <br>42 King Street West
+                                <br>Manchester
+                                <br>Lancashire
+                                <br>M3 2NU
+                            </p>
+                        </div>
+
+
+                        <div id="testesult7" style="display: none;">
+                            <p id="results7" ><span class="govuk-!-font-weight-bold">Admiral</span>
                                 <br>David Street
                                 <br>Cardiff
                                 <br>CF10 2EH
                             </p>
                         </div>
+
+
+                        <div id="testesult8" style="display: none;">
+                            <p id="results8" >
+                                <span class="govuk-!-font-weight-bold">DUNCAN LEWIS SOLICITORS LTD</span>
+                                <br>Spencer House
+                                <br>29 Grove Hill Road
+                                <br>Harrow-On-The-Hill
+                                <br>Harrow
+                                <br>Middlesex
+                                <br>HA1 3BN
+                            </p>
+                        </div>
+
+
+                        <div id="testesult9" style="display: none;">
+                            <p id="results9" >
+                                <span class="govuk-!-font-weight-bold">Farleys Solicitors LLP</span>
+                                <br>22-27 Richmond Terrace
+                                <br>Blackburn
+                                <br>Lancashire
+                                <br>BB1 7AF
+                            </p>
+                        </div>
+
+
+
+                        <div id="testesult10" style="display: none;">
+                            <p id="results10" >
+                                <span class="govuk-!-font-weight-bold">Gans & Co Solicitors LLP</span>
+                                <br>214-216 Rye Lane
+                                <br>Peckham
+                                <br>London
+                                <br>SE15 4NL
+                            </p>
+                        </div>
+
+
+
+                        <div id="testesult11" style="display: none;">
+                            <p id="results11" >
+                                <span class="govuk-!-font-weight-bold">Hcr Investments Limited</span>
+                                <br>5 Deansway
+                                <br>Worcester
+                                <br>Worcestershire
+                                <br>WR1 2JG
+                            </p>
+                        </div>
+
+
+
+                        <div id="testesult12" style="display: none;">
+                            <p id="results12" >
+                                <span class="govuk-!-font-weight-bold">Mishcon de Reya LLP</span>
+                                <br>Africa House
+                                <br>70 Kingsway
+                                <br>London
+                                <br>WC2B 6AH
+                            </p>
+                        </div>
+
+
+
+                        <div id="testesult13" style="display: none;">
+                            <p id="results13" >
+                                <span class="govuk-!-font-weight-bold">Newport City Council</span>
+                                <br>Civic Centre
+                                <br>Newport
+                                <br>Gwent
+                                <br>NP20 4UR
+                            </p>
+                        </div>
+
+
+                        <div id="testesult14" style="display: none;">
+                            <p id="results14" >
+                                <span class="govuk-!-font-weight-bold">Rix & Kay Solicitors LLP</span>
+                                <br>The Courtyard
+                                <br>River Way
+                                <br>Uckfield
+                                <br>East Sussex
+                                <br>TN22 1SL
+                            </p>
+                        </div>
+
+
+                        <div id="testesult15" style="display: none;">
+                            <p id="results15" >
+                                <span class="govuk-!-font-weight-bold">Thomas Horton LLP</span>
+                                <br>Strand House
+                                <br>70 The Strand
+                                <br>Bromsgrove
+                                <br>Worcestershire
+                                <br>B61 8DQ
+                            </p>
+                        </div>
+
+
+                        <div id="testesult16" style="display: none;">
+                            <p id="results16" >
+                                <span class="govuk-!-font-weight-bold">WILKIN CHAPMAN MEMBERS LTD</span>
+                                <br>Cartergate House
+                                <br>26 Chantry Lane
+                                <br>GRIMSBY
+                                <br>North East Lincolnshire
+                                <br>DN31 2LJ
+                            </p>
+                        </div>
+
+
+                        <div id="testesult17" style="display: none;">
+                            <p id="results17" >
+                                <span class="govuk-!-font-weight-bold">Zoopla Limited</span>
+                                <br>The Cooperage
+                                <br>5 Copper Row
+                                <br>London
+                                <br>SE1 2LH
+                            </p>
+                        </div>
+
+
                     </div>
 
 
@@ -115,7 +285,7 @@ Case details
         var prefixaddresswords = 'results';
         var prefixaddresscontainer = 'testesult';
         // check input has at least 2 character
-        var datacountplusone = 3;
+        var datacountplusone = 18;
         if (0 == entertedtext.length)
         {
             document.getElementById("noresults").style.display = "none";
@@ -150,6 +320,12 @@ Case details
         {
             //alert("NO match");
             document.getElementById("testesult1").style.display = "none";
+            // Hide all results
+            for (i = 1; i < datacountplusone; i++)
+            {
+                document.getElementById(prefixaddresscontainer + i).style.display = "none";
+            }
+
             document.getElementById("noresults").style.display = "block";
         }
     }, 500));
